--- a/roles/nctest05/defaults/main.yml
+++ b/roles/nctest05/defaults/main.yml
@@ -1,5 +1,5 @@
 vpls:
-  - { id: 10, saps: [1/1/1, 1/1/2] }
-  - { id: 20, saps: [] }
-  - { id: 30, saps: ["1/1/3:10", "1/1/3:20", "1/1/3:30"] }
+  - { name: alpha, id: 10, saps: [1/1/c3/1, 1/1/c4/1] }
+  - { name: bravo, id: 20, saps: [] }
+  - { name: charlie, id: 30, saps: ["1/1/c5/1:10", "1/1/c5/1:20", "1/1/c5/1:30"] }
 
