--- a/roles/nctest01/tasks/main.yml
+++ b/roles/nctest01/tasks/main.yml
@@ -1,17 +1,13 @@
-- name: Add customer (BASE R13 models)
-  netconf_config:
-    host: "{{ inventory_hostname }}"
-    username: "{{ hostvars[inventory_hostname].ansible_user }}"
-    password: "{{ hostvars[inventory_hostname].ansible_ssh_pass }}"
-    datastore: running
-    xml: |
-        <config xmlns="urn:ietf:params:xml:ns:netconf:base:1.0">
-          <configure xmlns="urn:alcatel-lucent.com:sros:ns:yang:conf-r13">
-            <service>
-              <customer operation="merge">
-                <customer-id>10</customer-id>
-              </customer>
-            </service>
-          </configure>
-        </config>
+- name: get state
+  netconf_get:
+    filter: <state xmlns="urn:nokia.com:sros:ns:yang:sr:state"><system/></state>
+    display: json
+  register: result
 
+- name: save result
+  set_fact:
+    my_var: "{{ result }}"
+
+- name: display results
+  debug:
+    var: my_var.output.data.state.system.version
