--- a/roles/nctest02/tasks/main.yml
+++ b/roles/nctest02/tasks/main.yml
@@ -1,15 +1,12 @@
-- name: Add customer (Nokia models) 
+- name: Add customer alpha (Nokia models) 
   netconf_config:
-    host: "{{ inventory_hostname }}"
-    username: "{{ hostvars[inventory_hostname].ansible_user }}"
-    password: "{{ hostvars[inventory_hostname].ansible_ssh_pass }}"
     datastore: candidate
-    hostkey_verify: false
-    xml: |
+    content: |
         <config xmlns="urn:ietf:params:xml:ns:netconf:base:1.0">
           <configure xmlns="urn:nokia.com:sros:ns:yang:sr:conf">
             <service>
               <customer operation="create">
+                <customer-name>alpha</customer-name>
                 <customer-id>10</customer-id>
               </customer>
             </service>
