--- a/roles/nctest04/tasks/main.yml
+++ b/roles/nctest04/tasks/main.yml
@@ -1,8 +1,5 @@
-- name: Remove customer (Nokia models) 
+- name: Remove customer alpha (Nokia models) 
   netconf_config:
-    host: "{{ inventory_hostname }}"
-    username: "{{ hostvars[inventory_hostname].ansible_user }}"
-    password: "{{ hostvars[inventory_hostname].ansible_ssh_pass }}"
     datastore: candidate
-    src: remove_customer_10.xml
+    content: "{{ lookup('file', 'templates/remove_customer_10.xml') }}"
 
