--- a/roles/nctest05/tasks/main.yml
+++ b/roles/nctest05/tasks/main.yml
@@ -1,8 +1,4 @@
-- name: Create VPLS with vars (Nokia models) 
+- name: Create VPLS services with vars (Nokia models) 
   netconf_config:
-    host: "{{ inventory_hostname }}"
-    username: "{{ hostvars[inventory_hostname].ansible_user }}"
-    password: "{{ hostvars[inventory_hostname].ansible_ssh_pass }}"
     datastore: candidate
-    src: create_vpls.j2
-
+    content: "{{ lookup('template', 'templates/create_vpls.xml') }}"
